--- a/package.json
+++ b/package.json
@@ -2,21 +2,28 @@
  "comments": {
   "dependencies": {},
   "devDependencies": {
+   "@fullhuman/postcss-purgecss": "github.com/cmlnet/blogwind",
    "@tailwindcss/typography": "github.com/cmlnet/blogwind",
    "autoprefixer": "github.com/cmlnet/blogwind",
    "postcss": "github.com/cmlnet/blogwind",
    "postcss-cli": "github.com/cmlnet/blogwind",
-   "postcss-purgecss": "github.com/cmlnet/blogwind",
+   "stylelint": "github.com/cmlnet/blogwind",
+   "stylelint-config-standard": "github.com/cmlnet/blogwind",
    "tailwindcss": "github.com/cmlnet/blogwind"
   }
  },
+ "dependencies": {
+  "package.json": "^2.0.1"
+ },
  "devDependencies": {
-  "@tailwindcss/typography": "^0.3.0",
-  "autoprefixer": "^10.0.4",
+  "@fullhuman/postcss-purgecss": "^4.0.3",
+  "@tailwindcss/typography": "^0.4.0",
+  "autoprefixer": "^10.2.5",
   "postcss": "^8.2.15",
-  "postcss-cli": "^8.3.0",
-  "postcss-purgecss": "^2.0.3",
-  "tailwindcss": "^2.0.1"
+  "postcss-cli": "^8.3.1",
+  "stylelint": "^13.13.1",
+  "stylelint-config-standard": "^22.0.0",
+  "tailwindcss": "^2.1.2"
  },
  "licence": "MIT",
  "name": "c-m-l.net",
