--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -65,7 +65,7 @@ replyByEmail = true
   showBreadcrumbs = false
   showDraftLabel = true
   showEdit = true
-  editURL = "https://github.com/cmlnet/repo/"
+  editURL = "https://github.com/cmlnet/c-m-l.net/tree/master/content/"
   editAppendPath = true
   seriesOpened = false
   showHeadingAnchors = true
