Update config (permalinks, date format) and publications

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -3,7 +3,7 @@
 # https://blowfish.page/docs/getting-started/
 
 # theme = "blowfish" # UNCOMMENT THIS LINE
-# baseURL = "https://your_domain.com/"
+baseURL = "https://www.c-m-l.net/"
 defaultContentLanguage = "de"
 
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
@@ -63,3 +63,7 @@ buildFuture = false
       name = 'fragmentrefs'
       type = 'fragments'
       weight = 10
+
+[permalinks]
+    posts = "/:year/:month/:title/"
+    pages = ":slug"
