--- a/config/_default/languages.de.toml
+++ b/config/_default/languages.de.toml
@@ -7,7 +7,7 @@ title = "c-m-l.net"
   displayName = "DE"
   isoCode = "de"
   rtl = false
-  dateFormat = "2 January 2006"
+  dateFormat = "2. January 2006"
   # logo = "img/logo.png"
   # secondaryLogo = "img/secondary-logo.png"
   # description = "My awesome website"
