--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -9,7 +9,7 @@ defaultContentLanguage = "de"
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
 
 enableRobotsTXT = true
-paginate = 10
+pagination.pagerSize = 10
 summaryLength = 120
 
 buildDrafts = false
