--- a/config/_default/module.toml
+++ b/config/_default/module.toml
@@ -2,5 +2,9 @@
 disable = false
 path = "github.com/nunocoracao/blowfish/v2"
 
+[[imports]]
+disable = false
+path = "github.com/future-wd/hugo-responsive-images"
+
 #[[imports]]
 #path = "github.com/cmlnet/hugo-creativecommons"
